--- a/contatos.html
+++ b/contatos.html
@@ -23,7 +23,8 @@
     </header>
     <section>
         <div class="box">
-            <form action="" method="post">
+            <form action="mailto:emailtestes@teste.com" method="post">
+                onsubmit="return enviar()">
                 <fieldset>
                     <legend><b>Entre em contato conosco</b></legend>
                     <br>
