--- a/contatos.html
+++ b/contatos.html
@@ -24,7 +24,7 @@
     <section>
         <div class="box">
             <form action="mailto:emailtestes@teste.com" method="post">
-                onsubmit="return enviar()">
+                <onsubmit="return enviar()">
                 <fieldset>
                     <legend><b>Entre em contato conosco</b></legend>
                     <br>
